--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "devDependencies": {
     "expect": "^1.20.1",
     "mocha": "^2.4.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alfa-bank-dev/build-front-container"
   }
 }
